@@ -1,11 +1,15 @@
 package co.simplon.jamixbusiness.accounts;
 
+import co.simplon.jamixbusiness.commons.contraints.PasswordStrength;
 import jakarta.validation.constraints.Email;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Size;
 
-public record AccountLoginDto(@Email(message = "Invalid email format") String email, String password) {
+public record AccountLoginDto(@NotBlank @Size(min = 6, max = 320) @Email(message = "Invalid email format") String email,
+	@NotBlank @PasswordStrength String password) {
     @Override
     public String toString() {
-	return String.format("{email=%s, password=[PROTECTED]}", email);
+	return "{email=%s, password=[PROTECTED]}".formatted(email);
     }
 
 }
